Cli (#1)
Add base cli