@@ -16,17 +16,19 @@ repositories {
     mavenCentral()
     jcenter()
     // Necessary for psiMiner
-    maven(url = "https://dl.bintray.com/egor-bogomolov/astminer")
+//    maven(url = "https://dl.bintray.com/egor-bogomolov/astminer")
 }
 
 dependencies {
     implementation(kotlin("stdlib-jdk8"))
+//  TODO: psiminer dependency caused an error because of different versions of kotlin and intellij
+//    implementation("org.jetbrains.research.psiminer:psiminer") {
+//        version {
+//            branch = "master"
+//        }
+//    }
 
-    implementation("org.jetbrains.research.psiminer:psiminer") {
-        version {
-            branch = "master"
-        }
-    }
+    implementation("com.xenomachina:kotlin-argparser:2.0.7")
 }
 
 intellij {
@@ -41,6 +43,18 @@ ktlint {
     enableExperimentalRules.set(true)
 }
 
+open class KotlinAnalysisCliTask : org.jetbrains.intellij.tasks.RunIdeTask() {
+    // Input directory with kotlin files
+    @get:Input
+    val input: String? by project
+
+    init {
+        jvmArgs = listOf("-Djava.awt.headless=true", "--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
+        standardInput = System.`in`
+        standardOutput = System.`out`
+    }
+}
+
 tasks {
     withType<JavaCompile> {
         sourceCompatibility = "11"
@@ -51,4 +65,12 @@ tasks {
     }
     withType<org.jetbrains.intellij.tasks.BuildSearchableOptionsTask>()
         .forEach { it.enabled = false }
+
+    register<KotlinAnalysisCliTask>("cli") {
+        dependsOn("buildPlugin")
+        args = listOfNotNull(
+            "kotlin-analysis",
+            input?.let { "--input=$it" }
+        )
+    }
 }
